--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -56,7 +56,7 @@ jobs:
                 send "2\r"
                 exp_continue
             }
-            -re {\\\$ |root@node.*:~#} {
+            -re {\\\\\\\$ |root@node.*:~#} {
                 send "docker ps -a | grep line-chatbot-container && docker rm -f line-chatbot-container || echo 'No existing container to remove.'\r"
                 send "docker pull bestbest/line-chatbot:${{ github.sha }} && docker run -d --name line-chatbot-container -p $PORT:6789 -e CHANNEL_SECRET=$CHANNEL_SECRET -e CHANNEL_TOKEN=$CHANNEL_TOKEN -e OPENAI_API_KEY=$OPENAI_API_KEY bestbest/line-chatbot:${{ github.sha }}\r"
                 expect {
@@ -85,5 +85,5 @@ jobs:
         chmod +x deploy_expect.sh
         ./deploy_expect.sh
 
-      - name: Confirm deployment success 
+      - name: Confirm deployment success
         run: echo "Deploy Success"
