--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -59,11 +59,10 @@ jobs:
             }
             -re {\\\$ |root@node.*:~#} {
                 send "docker ps -a | grep line-chatbot-container && docker rm -f line-chatbot-container || echo 'No existing container to remove.'\r"
-                send "docker pull bestbest/line-chatbot:latest && docker run -d --name line-chatbot-container -p $PORT:6789 -e CHANNEL_SECRET=$CHANNEL_SECRET -e CHANNEL_TOKEN=$CHANNEL_TOKEN -e OPENAI_API_KEY=$OPENAI_API_KEY bestbest/line-chatbot:latest\r"
+                send "docker pull bestbest/line-chatbot:${{ github.sha }} && docker run -d --name line-chatbot-container -p $PORT:6789 -e CHANNEL_SECRET=$CHANNEL_SECRET -e CHANNEL_TOKEN=$CHANNEL_TOKEN -e OPENAI_API_KEY=$OPENAI_API_KEY bestbest/line-chatbot:${{ github.sha }}\r"
                 expect {
                     -re "Up.*seconds" {
                         send_user "Container is running.\r"
-                        set exit_status 0
                     }
                     default {
                         send_user "Failed to start the container. Checking logs.\r"
@@ -71,24 +70,19 @@ jobs:
                         expect {
                             -re "Error.*" {
                                 send_user "Error found in logs.\r"
-                                set exit_status 1
+                                exit 1
                             }
                             default {
                                 send_user "No specific error in logs, container exited unexpectedly.\r"
-                                set exit_status 1
+                                exit 1
                             }
                         }
                     }
                 }
                 send "exit\r"
                 expect eof
-                exit $exit_status
             }
         }
-        EOF
-        chmod +x deploy_expect.sh
-        ./deploy_expect.sh
-
-
+        
     - name: Confirm deployment success
       run: echo "Deploy Success"
