--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,36 +31,21 @@ jobs:
         file: Dockerfile
         push: true
         tags: bestbest/line-chatbot:${{ github.sha }}
-      env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        CHANNEL_SECRET: ${{ secrets.CHANNEL_SECRET }}
-        CHANNEL_TOKEN: ${{ secrets.CHANNEL_TOKEN }}
-        PORT: 6789
 
     - name: Deploy via SSH
       run: |
         sudo apt-get update
         sudo apt-get install -y expect
-        cat > deploy_expect.sh << 'EOF'
-        #!/usr/bin/expect -f
-        set timeout -1
-        exp_internal 1  # Enable debugging
-    
-        spawn ssh -o BatchMode=yes -o StrictHostKeyChecking=no -p 3022 4504@gate.manage.proen.cloud
-        
-        expect {
-              -re {Enter \[0-5\]:} {
-                  # Assuming you want to select option 3 for 'line-bot'
-                  send "3\r"
-                  exp_continue
-              }
-          }
-          
-          # After selecting the environment, now expecting the container selection menu
-          expect {
-              -re {Enter \[0-2\]:} {
-                  # Assuming you want to select option 2 for 'Ubuntu'
-                  send "2\r"
-                  exp_continue
-              }
-          }
+        echo '#!/usr/bin/expect -f' > deploy_expect.sh
+        echo 'set timeout -1' >> deploy_expect.sh
+        echo 'exp_internal 1' >> deploy_expect.sh
+        echo 'spawn ssh -o BatchMode=yes -o StrictHostKeyChecking=no -p 3022 4504@gate.manage.proen.cloud' >> deploy_expect.sh
+        echo 'expect "Enter \[0-5\]:" { send "3\r" }' >> deploy_expect.sh
+        echo 'expect "Enter \[0-2\]:" { send "2\r" }' >> deploy_expect.sh
+        echo 'expect "root@*" { send "docker pull bestbest/line-chatbot:${{ github.sha }}\r" }' >> deploy_expect.sh
+        echo 'expect "root@*" { send "docker stop optimistic_haslett && docker rm optimistic_haslett\r" }' >> deploy_expect.sh
+        echo 'expect "root@*" { send "docker run -d --name optimistic_haslett -p 6789:6789 bestbest/line-chatbot:${{ github.sha }}\r" }' >> deploy_expect.sh
+        echo 'expect "root@*" { send "exit\r" }' >> deploy_expect.sh
+        echo 'expect eof' >> deploy_expect.sh
+        chmod +x deploy_expect.sh
+        ./deploy_expect.sh
