--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,9 +41,10 @@ jobs:
         set timeout -1
         spawn ssh -o BatchMode=yes -o StrictHostKeyChecking=no -p 3022 4504@gate.manage.proen.cloud
         
+        # Handle new host key confirmation, ignore output and continue
         expect {
             -re {.*Permanently added.*} {
-                exp_continue  # Handle new host key confirmation
+                exp_continue  # Ignore and continue
             }
             -re {.*Enter \[0-5\]:} {
                 send "3\r"
