--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,6 +58,8 @@ jobs:
                 send "docker stop optimistic_haslett && docker rm optimistic_haslett\r"
                 send "docker run -d --name optimistic_haslett -p 6789:6789 bestbest/line-chatbot:${{ github.sha }}\r"
                 send "exit\r"
+                expect "logout"   # ตรวจจับคำว่า logout ที่บ่งบอกว่าเซสชันได้จบลง
+                send "exit\r"
             }
         }
         expect eof
