--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,12 +58,10 @@ jobs:
                 send "docker stop optimistic_haslett && docker rm optimistic_haslett\r"
                 send "docker run -d --name optimistic_haslett -p 6789:6789 bestbest/line-chatbot:${{ github.sha }}\r"
                 send "exit\r"
-                expect "logout"   # ตรวจจับคำว่า logout ที่บ่งบอกว่าเซสชันได้จบลง
+                expect "logout"
                 send "exit\r"
-            }
-            -re {.*Enter \[0-2\]:} {
-                send "2\r"
-                exp_continue
+                expect "Enter \[0-2\]:" {  # ตรวจจับ prompt หลังจาก exit
+                    send "0\r"
             }
         }
         expect eof
