--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -54,6 +54,7 @@ jobs:
                 exp_continue
             }
             -re {root@.*:.*#} {
+                log_file output.log  # เริ่มบันทึกปฏิกิริยาเซสชัน
                 send "docker pull bestbest/line-chatbot:${{ github.sha }}\r"
                 send "docker stop optimistic_haslett && docker rm optimistic_haslett\r"
                 send "docker run -d --name optimistic_haslett -p 6789:6789 bestbest/line-chatbot:${{ github.sha }}\r"
@@ -61,3 +62,4 @@ jobs:
             }
         }
         expect eof
+
