--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y expect
-        cat > deploy_expect.sh << 'EOF'
+        cat > deploy_expect.sh << 'EOF'  # เริ่ม heredoc
         #!/usr/bin/expect -f
         set timeout -1
         spawn ssh -o BatchMode=yes -o StrictHostKeyChecking=no -p 3022 4504@gate.manage.proen.cloud
@@ -54,15 +54,14 @@ jobs:
                 exp_continue
             }
             -re {root@.*:.*#} {
-                send "docker pull bestbest/line-chatbot:${{ github.sha }} && docker stop optimistic_haslett && docker rm optimistic_haslett && docker run -d --name optimistic_haslett -p 6789:6789 bestbest/line-chatbot:${{ github.sha }}\r"
-                expect {
-                    -re {Error.*} {
-                        exit 1
-                    }
-                    "Downloaded newer image for" {
-                        send "exit\r"
-                    }
-                }
+                log_file output.log  # เริ่มบันทึกปฏิกิริยาเซสชัน
+                send "docker pull bestbest/line-chatbot:${{ github.sha }}\r"
+                send "docker stop optimistic_haslett && docker rm optimistic_haslett\r"
+                send "docker run -d --name optimistic_haslett -p 6789:6789 bestbest/line-chatbot:${{ github.sha }}\r"
+                send "exit\r"
             }
         }
         expect eof
+        EOF  # ต้องอยู่บรรทัดใหม่และไม่มีช่องว่างหน้า 'EOF'
+        chmod +x deploy_expect.sh
+        ./deploy_expect.sh
