--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y expect
-        cat > deploy_expect.sh << 'EOF'  # เริ่ม heredoc
+        cat > deploy_expect.sh << 'EOF' 
         #!/usr/bin/expect -f
         set timeout -1
         spawn ssh -o BatchMode=yes -o StrictHostKeyChecking=no -p 3022 4504@gate.manage.proen.cloud
@@ -62,6 +62,6 @@ jobs:
             }
         }
         expect eof
-        EOF  # ต้องอยู่บรรทัดใหม่และไม่มีช่องว่างหน้า 'EOF'
+        EOF 
         chmod +x deploy_expect.sh
         ./deploy_expect.sh
