--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -53,19 +53,8 @@ jobs:
                 send "2\r"
                 exp_continue
             }
-            -re {root@.*:.*#} {
-                log_file output.log  # เริ่มบันทึกปฏิกิริยาเซสชัน
+            "root@*" {
                 send "docker pull bestbest/line-chatbot:${{ github.sha }}\r"
-        expect {
-            "*Error*" {
-                puts "Error in pulling Docker image"
-                exit 1
-            }
-            "*Downloaded*" {
-                puts "Docker image pulled successfully"
-            }
-        }
-
                 send "docker stop optimistic_haslett && docker rm optimistic_haslett\r"
                 send "docker run -d --name optimistic_haslett -p 6789:6789 bestbest/line-chatbot:${{ github.sha }}\r"
                 send "exit\r"
@@ -75,3 +64,4 @@ jobs:
         EOF
         chmod +x deploy_expect.sh
         ./deploy_expect.sh
+
