--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+
 env:
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
   CHANNEL_SECRET: ${{ secrets.CHANNEL_SECRET }}
@@ -61,14 +62,14 @@ jobs:
               "root@*" {
                   send "docker pull bestbest/line-chatbot:${{ github.sha }}\r"
                   send "docker stop optimistic_haslett && docker rm optimistic_haslett\r"
-                  send "docker run -d -p 6789:6789\
-            --name optimistic_haslett \
-            -p $PORT:$PORT \
-            -e OPENAI_API_KEY=$OPENAI_API_KEY \
-            -e CHANNEL_SECRET=$CHANNEL_SECRET \
-            -e CHANNEL_TOKEN=$CHANNEL_TOKEN \
-            -e PORT=$PORT \
-            bestbest/line-chatbot:${{ github.sha }}\r"
+                  send "docker run -d \
+                        --name optimistic_haslett \
+                        -p $PORT:$PORT \
+                        -e OPENAI_API_KEY=$OPENAI_API_KEY \
+                        -e CHANNEL_SECRET=$CHANNEL_SECRET \
+                        -e CHANNEL_TOKEN=$CHANNEL_TOKEN \
+                        -e PORT=$PORT \
+                        bestbest/line-chatbot:${{ github.sha }}\r"
                   send "exit\r"
               }
           }
