--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,11 +5,6 @@ on:
     branches:
       - main
 
-env:
-  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-  CHANNEL_SECRET: ${{ secrets.CHANNEL_SECRET }}
-  CHANNEL_TOKEN: ${{ secrets.CHANNEL_TOKEN }}
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -63,9 +58,9 @@ jobs:
                   send "docker stop optimistic_haslett && docker rm optimistic_haslett\r"
                   send "docker run -d -p 6789:6789 \
                         --name optimistic_haslett \
-                        -e OPENAI_API_KEY=$OPENAI_API_KEY \
-                        -e CHANNEL_SECRET=$CHANNEL_SECRET \
-                        -e CHANNEL_TOKEN=$CHANNEL_TOKEN \
+                        -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
+                        -e CHANNEL_SECRET=${{ secrets.CHANNEL_SECRET }} \
+                        -e CHANNEL_TOKEN=${{ secrets.CHANNEL_TOKEN }} \
                         -e PORT=$PORT \
                         bestbest/line-chatbot:${{ github.sha }}\r"
                   send "exit\r"
