--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -59,9 +59,9 @@ jobs:
                   send "docker run -d \
                         --name optimistic_haslett \
                         -p $PORT:$PORT \
-                        -e OPENAI_API_KEY=$OPENAI_API_KEY \
-                        -e CHANNEL_SECRET=$CHANNEL_SECRET \
-                        -e CHANNEL_TOKEN=$CHANNEL_TOKEN \
+                        -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
+                        -e CHANNEL_SECRET=${{ secrets.CHANNEL_SECRET }} \
+                        -e CHANNEL_TOKEN=${{ secrets.CHANNEL_SECRET }} \
                         -e PORT=$PORT \
                         bestbest/line-chatbot:${{ github.sha }}\r"
                   send "exit\r"
