--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,6 +39,7 @@ jobs:
           cat > deploy_expect.sh << 'EOF'
           #!/usr/bin/expect -f
           set timeout -1
+          log_file -a /tmp/deploy.log
           spawn ssh -o BatchMode=yes -o StrictHostKeyChecking=no -p 3022 4504@gate.manage.proen.cloud
 
           expect {
@@ -54,6 +55,7 @@ jobs:
                   exp_continue
               }
               "root@*" {
+                  send_user "Connected to server\n"
                   send "docker pull bestbest/line-chatbot:${{ github.sha }}\r"
                   send "docker stop optimistic_haslett && docker rm optimistic_haslett\r"
                   send "docker run -d \
@@ -71,3 +73,4 @@ jobs:
           EOF
           chmod +x deploy_expect.sh
           ./deploy_expect.sh
+          cat /tmp/deploy.log
