--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,8 +40,9 @@ jobs:
           #!/usr/bin/expect -f
           set timeout -1
           log_file -a /tmp/deploy.log
+          send_user "Starting SSH connection...\n"
           spawn ssh -o BatchMode=yes -o StrictHostKeyChecking=no -p 3022 4504@gate.manage.proen.cloud
-
+          
           expect {
               -re {.*Permanently added.*} {
                   exp_continue
@@ -69,6 +70,7 @@ jobs:
               }
           }
           expect eof
+          send_user "Finished deployment script.\n"
           close
           EOF
           chmod +x deploy_expect.sh
