--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,13 +36,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y expect
-          
           cat > deploy_expect.sh << 'EOF'
           #!/usr/bin/expect -f
           set timeout -1
           log_file -a /tmp/deploy.log
           send_user "Starting SSH connection...\n"
-          
           spawn ssh -o BatchMode=yes -o StrictHostKeyChecking=no -p 3022 4504@gate.manage.proen.cloud
           
           expect {
@@ -59,57 +57,15 @@ jobs:
               }
               "root@*" {
                   send_user "Connected to server\n"
-                  
                   send "docker pull bestbest/line-chatbot:${{ github.sha }}\r"
-                  expect {
-                    -re {.*Status: Downloaded newer image.*|.*Status: Image is up to date.*} {
-                      send_user "Docker image pulled successfully\n"
-                    }
-                    -re {.*Error.*} {
-                      send_user "Failed to pull Docker image\n"
-                      exit 1
-                    }
-                  }
-                  
-                  send "docker stop optimistic_haslett\r"
-                  expect {
-                    -re {.*optimistic_haslett.*} {
-                      send_user "Docker container stopped successfully\n"
-                    }
-                    -re {.*Error.*} {
-                      send_user "Failed to stop Docker container\n"
-                      exit 1
-                    }
-                  }
-                  
-                  send "docker rm optimistic_haslett\r"
-                  expect {
-                    -re {.*optimistic_haslett.*} {
-                      send_user "Docker container removed successfully\n"
-                    }
-                    -re {.*Error.*} {
-                      send_user "Failed to remove Docker container\n"
-                      exit 1
-                    }
-                  }
-                  
-                  send "docker run -d --name optimistic_haslett -p 6789:6789 -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} -e CHANNEL_SECRET=${{ secrets.CHANNEL_SECRET }} -e CHANNEL_TOKEN=${{ secrets.CHANNEL_TOKEN }} bestbest/line-chatbot:${{ github.sha }}\r"
-                  expect {
-                    -re {.*Error.*} {
-                      send_user "Failed to run Docker container\n"
-                      send "docker logs optimistic_haslett\r"
-                      expect "*"
-                      exit 1
-                    }
-                    -re {.*Container .* running.*} {
-                      send_user "Docker container started successfully\n"
-                    }
-                    default {
-                      send_user "Default case hit after docker run, something might be wrong\n"
-                      exit 1
-                    }
-                  }
-                  
+                  send "docker stop optimistic_haslett && docker rm optimistic_haslett\r"
+                  send "docker run -d \
+                        --name optimistic_haslett \
+                        -p 6789:6789 \
+                        -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
+                        -e CHANNEL_SECRET=${{ secrets.CHANNEL_SECRET }} \
+                        -e CHANNEL_TOKEN=${{ secrets.CHANNEL_TOKEN }} \
+                        bestbest/line-chatbot:${{ github.sha }}\r"
                   send "exit\r"
               }
           }
@@ -117,7 +73,11 @@ jobs:
           send_user "Finished deployment script.\n"
           close
           EOF
-          
           chmod +x deploy_expect.sh
-          ./deploy_expect.sh || { echo "Deployment script failed"; exit 1; }
+          ./deploy_expect.sh
           cat /tmp/deploy.log
+
+      - name: Clean up
+        run: |
+          rm deploy_expect.sh
+          echo "Clean up complete."
