--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -66,7 +66,24 @@ jobs:
                           send_user "Image is up to date\n"
                       }
                   }
-                  send "docker stop optimistic_haslett && docker rm optimistic_haslett\r"
+                  send "docker stop optimistic_haslett\r"
+                  expect {
+                      "No such container" {
+                          send_user "No container to stop.\n"
+                      }
+                      eof {
+                          send_user "Container stopped.\n"
+                      }
+                  }
+                  send "docker rm optimistic_haslett\r"
+                  expect {
+                      "No such container" {
+                          send_user "No container to remove.\n"
+                      }
+                      eof {
+                          send_user "Container removed.\n"
+                      }
+                  }
                   send "docker run -d \
                         --name optimistic_haslett \
                         -p 6789:6789 \
@@ -74,18 +91,17 @@ jobs:
                         -e CHANNEL_SECRET=${{ secrets.CHANNEL_SECRET }} \
                         -e CHANNEL_TOKEN=${{ secrets.CHANNEL_TOKEN }} \
                         bestbest/line-chatbot:${{ github.sha }}\r"
+                  expect {
+                      "Unable to find image" {
+                          send_user "Error: Docker image not found.\n"
+                          exit 1
+                      }
+                      eof {
+                          send_user "Container started.\n"
+                      }
+                  }
                   send "exit\r"
-              }
-          }
-          expect eof
-          send_user "Finished deployment script.\n"
-          close
-          EOF
-          chmod +x deploy_expect.sh
-          ./deploy_expect.sh
-          cat /tmp/deploy.log
-
-      - name: Clean up
-        run: |
-          rm deploy_expect.sh
-          echo "Clean up complete."
+                  expect eof
+                  send_user "Finished deployment script.\n"
+                  close
+    
